Update 2ndKYC Changes

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "build:vps": "NODE_OPTIONS='--max-old-space-size=3072' next build",
+    "build": "prisma generate && next build",
+    "build:vps": "prisma generate && NODE_OPTIONS='--max-old-space-size=3072' next build",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start -p ${PORT:-3000}",
