--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@sparticuz/chromium": "^143.0.0",
     "@types/qrcode": "^1.5.6",
     "@vercel/analytics": "1.3.1",
     "ajv": "^8.17.1",
@@ -73,6 +74,7 @@
     "prembly-pass": "^0.1.5",
     "prisma": "^6.18.0",
     "puppeteer": "^24.27.0",
+    "puppeteer-core": "^24.34.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "latest",
     "react": "^19.2.0",
