--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "4.1.0",
